feat: Replace Community Service section with YouTube video and new content
- Replace static image with embedded YouTube video (Nix_-_KwkcA)
- Update title to 'A World Level International School BDS'
- Update description with new content about transcending traditional boundaries
- Maintain responsive layout with video on left, text on right

--- a/index.html
+++ b/index.html
@@ -1324,23 +1324,22 @@
   <section class="latest-news-section">
     <div class="latest-news-container">
       <div class="news-items">
-        <!-- News Item 1: Image on Left, Text on Right -->
+<!-- News Item 1: YouTube Video on Left, Text on Right -->
         <div class="news-item">
-          <div class="news-item-image-container">
-            <img src="https://images.unsplash.com/photo-1523050854058-8df90110c9f1?ixlib=rb-4.0.3&auto=format&fit=crop&w=1200&q=80" alt="Community Service" class="news-item-image">
-            <div class="news-item-video-overlay">
-              <div class="video-play-button">
-                <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
-                  <polygon points="9 6 9 18 18 12"></polygon>
-                </svg>
-              </div>
-              <div class="video-overlay-text">Join us for a Day of Service</div>
-            </div>
+          <div class="news-item-image-container" style="position: relative; padding-bottom: 56.25%; height: 0; overflow: hidden;">
+            <iframe 
+              style="position: absolute; top: 0; left: 0; width: 100%; height: 100%; border: 0; border-radius: 8px;" 
+              src="https://www.youtube.com/embed/Nix_-_KwkcA" 
+              title="A World Level International School BDS" 
+              frameborder="0" 
+              allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
+              allowfullscreen>
+            </iframe>
           </div>
           <div class="news-item-content">
-            <h3 class="news-item-title">Serving our community</h3>
+            <h3 class="news-item-title">A World Level International School BDS</h3>
             <p class="news-item-description">
-              BDS Ed Portal offers lectures, arts and culture events, public school partnerships, youth programming, and more. BDS students, faculty, staff, and alumni participate in days of service, partner with local non-profits, and organize seasonal drives.
+              At BDS, we transcend traditional boundaries to provide a world-class education that prepares students to lead with excellence and integrity in an interconnected world.
             </p>
           </div>
         </div>
