--- a/index.html
+++ b/index.html
@@ -1344,23 +1344,23 @@
           </div>
         </div>
         
-        <!-- News Item 2: Text on Left, Image on Right -->
+        <!-- News Item 2: Text on Left, YouTube Video on Right -->
         <div class="news-item reverse">
           <div class="news-item-content">
-            <h3 class="news-item-title">Serving our country</h3>
+            <h3 class="news-item-title">Beyond Dream, Beyond Border - Germany</h3>
             <p class="news-item-description">
-              BDS has a deeply interwoven history with the U.S. military. The rise of ROTC students and programs like BDS Kennedy School's American Service Fellowship continue this tradition of service and leadership.
+              BDS Germany: Bridging rigorous academic excellence with global opportunity. We empower students to transcend boundaries and turn dreams into reality.
             </p>
-            <a href="#" class="news-item-link">
-              Learn about BDS's tradition of military service
-              <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
-                <line x1="5" y1="12" x2="19" y2="12"></line>
-                <polyline points="12 5 19 12 12 19"></polyline>
-              </svg>
-            </a>
           </div>
-          <div class="news-item-image-container">
-            <img src="https://images.unsplash.com/photo-1503676260728-1c00da094a0b?ixlib=rb-4.0.3&auto=format&fit=crop&w=1200&q=80" alt="Military Service" class="news-item-image">
+          <div class="news-item-image-container" style="position: relative; padding-bottom: 56.25%; height: 0; overflow: hidden;">
+            <iframe 
+              style="position: absolute; top: 0; left: 0; width: 100%; height: 100%; border: 0; border-radius: 8px;" 
+              src="https://www.youtube.com/embed/qemvy9SIkGs" 
+              title="Beyond Dream Beyond Border - Germany" 
+              frameborder="0" 
+              allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
+              allowfullscreen>
+            </iframe>
           </div>
         </div>
         
