--- a/index.html
+++ b/index.html
@@ -1364,23 +1364,23 @@
           </div>
         </div>
         
-        <!-- News Item 3: Image on Left, Text on Right -->
+        <!-- News Item 3: YouTube Video on Left, Text on Right -->
         <div class="news-item">
-          <div class="news-item-image-container">
-            <img src="https://images.unsplash.com/photo-1522202176988-66273c2fd55f?ixlib=rb-4.0.3&auto=format&fit=crop&w=1200&q=80" alt="Global Leadership" class="news-item-image">
+          <div class="news-item-image-container" style="position: relative; padding-bottom: 56.25%; height: 0; overflow: hidden;">
+            <iframe 
+              style="position: absolute; top: 0; left: 0; width: 100%; height: 100%; border: 0; border-radius: 8px;" 
+              src="https://www.youtube.com/embed/SooTDsGLspw" 
+              title="BDS Summer Camp at Ongdalsam" 
+              frameborder="0" 
+              allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
+              allowfullscreen>
+            </iframe>
           </div>
           <div class="news-item-content">
-            <h3 class="news-item-title">Global Leadership Program</h3>
+            <h3 class="news-item-title">BDS Summer Camp at Ongdalsam</h3>
             <p class="news-item-description">
-              Our comprehensive global leadership program brings together students from diverse backgrounds to develop skills in cross-cultural communication, international collaboration, and sustainable development. Through partnerships with leading institutions worldwide, students gain hands-on experience in addressing global challenges.
+              A transformative retreat where nature meets global vision. Empowering students to go Beyond Dreams through mindful growth and forest adventures.
             </p>
-            <a href="#" class="news-item-link">
-              Explore our global programs
-              <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
-                <line x1="5" y1="12" x2="19" y2="12"></line>
-                <polyline points="12 5 19 12 12 19"></polyline>
-              </svg>
-            </a>
           </div>
         </div>
         
