feat: Replace 'Campus Life at BDS' section with Campus Tour video
- Replace campus life section with BDS Campus Tour
- Add YouTube video embed (h-cVC19b-ro)
- Update title to 'BDS Campus Tour'
- Update description with facilities and learning environment message
- Maintain reverse layout (text left, video right)

--- a/index.html
+++ b/index.html
@@ -1384,31 +1384,23 @@
           </div>
         </div>
         
-        <!-- News Item 4: Text on Left, Image on Right -->
+        <!-- News Item 4: Text on Left, YouTube Video on Right -->
         <div class="news-item reverse">
           <div class="news-item-content">
-            <h3 class="news-item-title">Campus Life at BDS</h3>
+            <h3 class="news-item-title">BDS Campus Tour</h3>
             <p class="news-item-description">
-              Experience life at BDS through our vibrant campus community. From student organizations and cultural events to athletic programs and community service, there are countless ways to get involved and make lasting connections.
+              Explore the future of global education. Witness our world-class facilities and visionary learning environment where every border becomes a bridge.
             </p>
-            <a href="#" class="news-item-link">
-              Discover campus life
-              <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
-                <line x1="5" y1="12" x2="19" y2="12"></line>
-                <polyline points="12 5 19 12 12 19"></polyline>
-              </svg>
-            </a>
           </div>
-          <div class="news-item-image-container">
-            <img src="https://images.unsplash.com/photo-1524178232363-1fb2b075b655?ixlib=rb-4.0.3&auto=format&fit=crop&w=1200&q=80" alt="Campus Life" class="news-item-image">
-            <div class="news-item-video-overlay">
-              <div class="video-play-button">
-                <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
-                  <polygon points="9 6 9 18 18 12"></polygon>
-                </svg>
-              </div>
-              <div class="video-overlay-text">Watch: A Day in the Life at BDS</div>
-            </div>
+          <div class="news-item-image-container" style="position: relative; padding-bottom: 56.25%; height: 0; overflow: hidden;">
+            <iframe 
+              style="position: absolute; top: 0; left: 0; width: 100%; height: 100%; border: 0; border-radius: 8px;" 
+              src="https://www.youtube.com/embed/h-cVC19b-ro" 
+              title="BDS Campus Tour" 
+              frameborder="0" 
+              allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
+              allowfullscreen>
+            </iframe>
           </div>
         </div>
       </div>
