feat: Update section 4 with BDS Official Introduction video
- Replace Campus Tour with BDS Official Introduction
- Add YouTube video embed (9i4l0ARCG38)
- Update title to 'BDS Official Introduction'
- Update description with Dreams Beyond Dreams mission
- Emphasize leadership and global contribution message

--- a/index.html
+++ b/index.html
@@ -1387,16 +1387,16 @@
         <!-- News Item 4: Text on Left, YouTube Video on Right -->
         <div class="news-item reverse">
           <div class="news-item-content">
-            <h3 class="news-item-title">BDS Campus Tour</h3>
+            <h3 class="news-item-title">BDS Official Introduction</h3>
             <p class="news-item-description">
-              Explore the future of global education. Witness our world-class facilities and visionary learning environment where every border becomes a bridge.
+              Empowering students to realize 'Dreams Beyond Dreams'—where personal passion meets global contribution. We nurture leaders who find their purpose and expand it to serve the happiness of others.
             </p>
           </div>
           <div class="news-item-image-container" style="position: relative; padding-bottom: 56.25%; height: 0; overflow: hidden;">
             <iframe 
               style="position: absolute; top: 0; left: 0; width: 100%; height: 100%; border: 0; border-radius: 8px;" 
-              src="https://www.youtube.com/embed/h-cVC19b-ro" 
-              title="BDS Campus Tour" 
+              src="https://www.youtube.com/embed/9i4l0ARCG38" 
+              title="BDS Official Introduction" 
               frameborder="0" 
               allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
               allowfullscreen>
