feat: Add Academic Calendar page with dedicated display
- Updated header notice text to 'BDS Academic Calendar & Key Highlights'
- Created dedicated academic-calendar.html page for calendar display
- Added academic calendar image (2025-2026) - 458KB
- Linked header notice to new calendar page
- Implemented Harvard-style design for calendar page
- Added key highlights section with semester dates and events
- Responsive layout for mobile and desktop viewing

--- a/index.html
+++ b/index.html
@@ -1338,7 +1338,7 @@
           </div>
           <div class="header-notice">
             <div class="header-notice-bullet"></div>
-            <a href="#" class="header-notice-text">Learn about our lawsuits to protect our students and researchers</a>
+            <a href="academic-calendar.html" class="header-notice-text">BDS Academic Calendar & Key Highlights</a>
           </div>
         </div>
         <div class="header-right-black">
