--- a/index.html
+++ b/index.html
@@ -1709,6 +1709,13 @@
           </p>
         </div>
         
+        <div style="background: #f7f7f7; padding: 30px 28px;">
+          <h3 style="font-size: 1.2rem; margin-bottom: 12px; color: #1a1a1a; font-weight: 400;">Meditation & Reflection Center</h3>
+          <p style="font-size: 0.9rem; line-height: 1.6; color: #333333;">
+            Dedicated spaces for daily meditation, assemblies, and quiet reflection, designed to cultivate inner strength, emotional balance, and mindful leadership within a peaceful natural setting.
+          </p>
+        </div>
+        
       </div>
     </div>
   </section>
