update: Standardize footer copyright text across all pages
- Updated copyright year range from 2024 to 2020-2026
- Removed Korean text (충주 옹달샘 명상센터 | 아침편지 문화재단) from all pages
- Standardized format: 'Copyright © 2020-2026 BDS (Beyond Dream Scholars). All rights reserved.'
- Changes applied to:
  - index.html (main page footer)
  - academic-calendar.html (calendar page footer)
- Maintains consistent branding across all pages
- English-only footer content for international audience

--- a/academic-calendar.html
+++ b/academic-calendar.html
@@ -256,8 +256,7 @@
   <!-- Footer -->
   <footer class="footer">
     <div class="footer-container">
-      <p class="footer-text">© 2024-2026 BDS - Beyond Dream Scholars. All rights reserved.</p>
-      <p class="footer-text" style="margin-top: 8px;">충주 옹달샘 명상센터 | 아침편지 문화재단</p>
+      <p class="footer-text">Copyright © 2020-2026 BDS (Beyond Dream Scholars). All rights reserved.</p>
     </div>
   </footer>
 
