--- a/index.html
+++ b/index.html
@@ -1861,7 +1861,7 @@
         </div>
       </div>
       <div class="footer-bottom">
-        <p>Copyright © 2024 BDS (Beyond Dream Scholars)</p>
+        <p>Copyright © 2020-2026 BDS (Beyond Dream Scholars). All rights reserved.</p>
       </div>
     </div>
   </footer>
